<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="hello">Developed by Gihan Chanuka...</string>
    <string name="app_name">Childroid-4.0.3</string>
    <string name="smsreceivetopic">SMS receive from Parentdroid</string>
    <string name="smsreceivetxt">Recieved SMS</string>
    <string name="smssendtxt">Sent SMS</string>
    <string name="mainButton">Change Settings</string>
    <string name="showmsgbutton">Show Sent Msg</string>
    <string name="smssendbody">Sent msg</string>
    <string name="smssendtopic">Sent sms</string>
    <string name="sendemailbutton">Send Email</string>
    <string name="mapviewtopic">Map View</string>
    <string name="showchildlocation">Set Childroid Location(Demo)</string>
    <string name="username">User Name</string>
    <string name="usernametext">admin</string>
    <string name="password">Password</string>
    <string name="passwordtext">admin</string>
    <string name="usertype">User Type</string>
    <string name="loginbutton">Login</string>
    <string name="cancel">Cancel</string>
    <string name="installapp">Show Install Apps</string>
    <string name="adminlabel">Admin Lable </string>
    <string name="admindis">Admin Description</string>
    <string name="admin_receiver_status_enabled">admin_receiver_status_enabled</string>
    <string name="admin_receiver_status_disabled">admin_receiver_status_disabled</string>
    <string name="admin_receiver_status">admin_receiver_status</string>
    <string-array name="listArray"/>
    <string-array name="listValues"/>
</resources>
